# django-shopify-framework

./: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
django_shopify_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shopify_framework/: admin.py  apps.py  remotes.py  shortcuts.py  urls.py  utils.py
shopify_framework/migrations/: 0001_initial.py  0002_webhook.py  0003_auto_20200322_0311.py  0004_remove_webhook_graph_id.py
shopify_framework/models/: __init__.py  authshop_model.py  signals.py  webhook_model.py
shopify_framework/static/editable/: authRedirect.js  package-lock.json  package.json  webpack.config.js
shopify_framework/templates/shopify_framework/: auth_redirect.html  base.html
shopify_framework/views/: __init__.py  decorators.py  webhooks_views.py
